Navbar z-index issue resolved

--- a/src/styles/default/componentstyles/button.scss
+++ b/src/styles/default/componentstyles/button.scss
@@ -140,7 +140,7 @@ button {
 }
 
 .button-dropdown-up{
-  bottom: 100%;
+  bottom: 62%;
 }
 
 
